--- a/notebooks/milestone-2.ipynb
+++ b/notebooks/milestone-2.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1a3a84be",
+   "metadata": {},
+   "source": [
+    "# Milestone 2: Data Cleaning and Feature Engineering\n",
+    "\n",
+    "## Objective\n",
+    "The objective of this milestone is to convert raw exoplanet data into\n",
+    "a clean, structured, and machine-learning-ready dataset.\n",
+    "\n",
+    "This includes:\n",
+    "- Handling missing values\n",
+    "- Selecting relevant features\n",
+    "- Defining a habitability target variable\n",
+    "- Preparing data for model training\n",
+    "\n",
+    "All decisions are guided by both data quality and scientific reasoning.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "1531f840",
